<resources>
    <string name="app_name">MobileMania</string>
    <string name="yourcart">Your Cart</string>
    <string name="order">Order Summary</string>
    <string name="total">Total</string>
    <string name="totalval"></string>
    <string name="keepshopping">KEEP SHOPPING</string>
    <string name="checkout">CHECKOUT</string>
    <string name="checkoutview"></string>
    <string name="paymentapp">Payment</string>
    <string name="checkoutapp">Checkout</string>
    <string name="name">Name</string>
    <string name="namein"></string>
    <string name="mobile">Contact No.</string>
    <string name="mobileno"></string>
    <string name="method">Payment Method</string>
    <string name="cardno"></string>
    <string name="card">Card No.</string>
    <string name="_0000_0000_0000_0000">0000-0000-0000-0000</string>
    <string name="address">Delivery Address</string>
    <string name="addressin"></string>
    <string name="pay">PAY</string>
    <string name="item1">ITEM 1</string>
    <string name="login_main">LOGIN</string>
    <string name="vaddress"></string>
    <string name="vname"></string>
    <string name="vphone"></string>
    <string name="cdelete">DELETE</string>
    <string name="cupdate">UPDATE</string>
    <string name="cconfirm">CONFIRM</string>
    <string name="addDetails">ADD</string>
    <string name="view_orders">View Orders</string>
    <string name="view">View Orders</string>
    <string name="update_orders">Update Orders</string>
    <string name="id">ID</string>
    <string name="delete_orders">Delete Order</string>
    <string name="delete_cart">Delete</string>
    <string name="vemail" />
    <string name="citems" />
    <string name="clear">Clear</string>

    <string name="textView1">User Name</string>


    -----------------------Maneesha---------------------------------
    <string name="UserName">Enter your user name</string>
    <string name="textView2">Password</string>
    <string name="Password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="textView">First Name</string>
    <string name="textView3">Last Name</string>
    <string name="textView5">Confirm Password</string>
    <string name="textView7">Address</string>
    <string name="textView8">Contact Number</string>
    <string name="createAcc">Create Account</string>
    <string name="textView9">Welcome to MobileMania</string>
    <string name="proceed">Proceed</string>
    <string name="logInAsAdmin">Log In As Admin</string>
    <string name="logInAsUser">Log In As User</string>
    <string name="logInAsDeliveryOperator">Log In As Delivery Operator</string>
    <string name="logInAsDeliveryPerson">Log In As Delivery Person</string>
    <string name="Item">Item Management</string>
    <string name="User">User Management</string>
    <string name="Delivery">Delivery Management</string>
    <string name="UpdateButton">Update Details</string>
    <string name="DeleteAccount">Delete My Account</string>
    <string name="AccountDetails">My Account </string>
    <string name="btnAccount">My Account</string>
    <string name="btnBuy">BUY</string>
    <string name="btnBack">Back</string>
    <string name="btnView">View</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="adminlogin">Admin Login</string>

    ----------------------------------------------------------------------------------------------
    <string-array name="paymentm">
        <item>VISA</item>
        <item>MasterCard</item>
    </string-array>

    ----------------------------------Ragavi----------------------------------------------------
    <string name="description">Description</string>
    <string name="item_list">Item List</string>
    <string name="add">Add</string>
    <string name="choose_image">Choose image</string>
    <string name="price">Price</string>
    <string name="name_of_item">Name of Item</string>
    <string name="item_name">Item name</string>
    <string name="update">Update</string>
    <string name="add_item">ADD ITEM</string>
    <string name="search_">Search</string>

    ----------------------------------Tharusha----------------------------------------------------

    <string name="add_btn">Add Deliverer</string>
    <string name="view_btn">View Deliverer</string>
    <string name="txt_creditor">DELIVERER</string>
    <string name="txt_debitor">DEBITORS</string>
    <string name="home_c">DELIVERER</string>
    <string name="home_d">DEBITORS</string>
    <string name="txt_addDeliverer">Delivery Home</string>
    <string name="add_namec"></string>
    <string name="add_phonec"></string>
    <string name="add_id"></string>
    <string name="add_datec"></string>
    <string name="savec_btn">SAVE DETAILS</string>
    <string name="clearc_btn">CLEAR ALL</string>
    <string name="txt_searchc">SEARCH HERE</string>
    <string name="searchtxtc"></string>
    <string name="btn_searchback">BACK </string>
    <string name="btn_dlt">DELETE </string>
    <string name="txt_updatec">UPDATE DETAILS</string>
    <string name="supdatetxt"></string>
    <string name="update_name"></string>
    <string name="btn_updateback">BACK </string>
    <string name="btn_update">UPDATE</string>
    <string name="txt_addDeliverer1">ADD DELIVERY</string>
    <string name="ADAssignId">Order ID</string>
    <string name="ADDeliryPersn">Delivery Person</string>
    <string name="ADDelivery">Add Details</string>

</resources>
