<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myaccback"
    tools:context=".UserAccount">

    <EditText
        android:id="@+id/fnamedis"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_marginTop="170dp"
        android:autofillHints="@string/textView1"
        android:backgroundTint="@color/colorFontLogin"
        android:hint="@string/textView"
        android:textColor="@color/colorFontLogin"
        android:textColorHint="@color/colorFontLogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lnamedis"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:autofillHints="@string/textView7"
        android:backgroundTint="@color/colorFontLogin"
        android:hint="@string/textView3"
        android:textColor="@color/colorFontLogin"
        android:textColorHint="@color/colorFontLogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnamedis" />

    <EditText
        android:id="@+id/unamedis"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/textView8"
        android:backgroundTint="@color/colorFontLogin"
        android:hint="@string/textView1"
        android:textColor="@color/colorFontLogin"
        android:textColorHint="@color/colorFontLogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnamedis" />

    <EditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/textView2"
        android:backgroundTint="@color/colorFontLogin"
        android:hint="@string/textView7"
        android:textColor="@color/colorFontLogin"
        android:textColorHint="@color/colorFontLogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unamedis" />

    <EditText
        android:id="@+id/address"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/textView2"
        android:backgroundTint="@color/colorFontLogin"
        android:hint="@string/textView8"
        android:textColor="@color/colorFontLogin"
        android:textColorHint="@color/colorFontLogin"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorUpdateBtn"
        android:onClick="UpdateDetails"
        android:text="@string/UpdateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="172dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="deleteAccount"
        android:text="@string/DeleteAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/button"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickBack"
        android:text="@string/btnBack"
        android:background="@color/backBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:layout_width="96dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="logout"
        android:background="@color/colorPrimaryDark"
        android:text="LOG OUT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

</androidx.constraintlayout.widget.ConstraintLayout>