<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackback"
    tools:context=".UserMain">

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickAcc"
        android:text="@string/btnAccount"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickBuy"
        android:text="@string/btnBuy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/manage_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccount" />

    <Button
        android:id="@+id/manage_orders"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="58dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClickManage_orders"
        android:text="@string/manage_orders"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuy" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/backBtn"
        android:onClick="onClickBack"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

</androidx.constraintlayout.widget.ConstraintLayout>