<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="583dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="112dp"
        android:background="@android:drawable/sym_def_app_icon"
        android:onClick="onClickCheckOut"
        android:text="@string/checkoutapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_main"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="200dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:onClick="onClickLogin_main"
        android:text="@string/login_main"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="274dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="44dp"
        android:onClick="onClickView"
        android:text="@string/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />
</androidx.constraintlayout.widget.ConstraintLayout>