<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkoutapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".checkout">

    <Button
        android:id="@+id/checkout"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="80dp"
        android:background="@color/design_default_color_primary"
        android:onClick="onClickcheckout"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/keepshopping" />

    <Button
        android:id="@+id/keepshopping"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="80dp"
        android:background="@color/design_default_color_primary"
        android:onClick="onClickkeepshopping"
        android:text="@string/keepshopping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order"
        android:layout_width="405dp"
        android:layout_height="58dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="123dp"
        android:background="@android:drawable/dialog_frame"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/order"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/cart_view"
        android:layout_width="328dp"
        android:layout_height="313dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order" />

</androidx.constraintlayout.widget.ConstraintLayout>